--- a/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
@@ -33,7 +33,7 @@
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
-<script>const base = "[[@{/}]]";</script>
+<script>const base = "[[@{/}]]"; const siteid = [[${siteid}]]</script>
 <script th:src="@{/webjars/layui/2.5.6/layui.all.js}"></script>
 <script th:src="@{/js/book/list.js}"></script>
 </body>
