--- a/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
@@ -28,6 +28,7 @@
 </form>
 <table id="table" lay-filter="table"></table>
 <script type="text/html" id="toolbar">
+    <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="showBook">书籍</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
