--- a/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
@@ -6,27 +6,27 @@
     <link th:href="@{/webjars/layui/2.5.6/css/layui.css}" rel="stylesheet" media="all">
 </head>
 <body>
-<div class="layui-card">
-    <br/>
-    <span class="layui-breadcrumb" lay-separator=">>>">
-      <a th:href="@{/mian}">首页</a>
-      <a><cite>站点</cite></a>
-    </span>
-    <br/>
-</div>
-<form class="layui-form">
-    <div class="layui-inline">
-        <div class="layui-input-inline">
-            <input type="text" class="layui-input searVal" placeholder="请输入名称"/>
+<blockquote class="layui-elem-quote layui-quote-nm">
+    <div class="layui-card">
+        <span class="layui-breadcrumb" lay-separator=">>>">
+          <a th:href="@{/mian}">首页</a>
+          <a><cite>站点</cite></a>
+        </span>
+    </div>
+    <form class="layui-form">
+        <div class="layui-inline">
+            <div class="layui-input-inline">
+                <input type="text" class="layui-input searVal" placeholder="请输入名称"/>
+            </div>
+            <a class="layui-btn search">搜索</a>
         </div>
-        <a class="layui-btn search">搜索</a>
-    </div>
-    <div class="layui-inline" style="float: right;">
-        <a class="layui-btn layui-btn-normal add">添加</a>
-        <a class="layui-btn layui-btn-danger layui-btn-normal delAll">删除</a>
-    </div>
-</form>
-<table id="table" lay-filter="table"></table>
+        <div class="layui-inline" style="float: right;">
+            <a class="layui-btn layui-btn-normal add">添加</a>
+            <a class="layui-btn layui-btn-danger layui-btn-normal delAll">删除</a>
+        </div>
+    </form>
+    <table id="table" lay-filter="table"></table>
+</blockquote>
 <script type="text/html" id="toolbar">
     <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="showBook">书籍</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
