--- a/04小说和漫画/fictionweb/src/main/resources/templates/config/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/config/list.html
@@ -9,7 +9,7 @@
 <blockquote class="layui-elem-quote layui-quote-nm">
     <div class="layui-card">
         <span class="layui-breadcrumb" lay-separator=">>>">
-          <a th:href="@{/mian}">首页</a>
+          <a th:href="@{/main}">首页</a>
           <a><cite>配置</cite></a>
         </span>
     </div>
