--- a/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>书籍</title>
@@ -36,6 +36,7 @@
 <script>const base = "[[@{/}]]";
 const siteid = [[${siteid}]]</script>
 <script th:src="@{/webjars/layui/2.5.6/layui.all.js}"></script>
+<script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/book/list.js}"></script>
 </body>
 </html>
