--- a/04小说和漫画/fictionweb/src/main/resources/templates/config/add.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/config/add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>添加</title>
@@ -91,6 +91,7 @@
 <script>const base = "[[@{/}]]";
 const id = [[${id}]];</script>
 <script th:src="@{/webjars/layui/2.5.6/layui.all.js}"></script>
+<script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/config/add.js}"></script>
 </body>
 </html>
