--- a/04小说和漫画/fictionweb/src/main/resources/templates/config/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/config/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>配置</title>
@@ -33,6 +33,7 @@
 </script>
 <script>const base = "[[@{/}]]";</script>
 <script th:src="@{/webjars/layui/2.5.6/layui.all.js}"></script>
+<script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/config/list.js}"></script>
 </body>
 </html>
