fictionweb:下载和其他调整。

--- a/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
@@ -30,6 +30,7 @@
 <script type="text/html" id="toolbar">
     <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="showChapter">章节</a>
     <a class="layui-btn layui-btn-warm layui-btn-xs" lay-event="download">下载</a>
+    <a class="layui-btn layui-btn-warm layui-btn-xs" lay-event="download2">下载2</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
