--- a/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
@@ -13,7 +13,7 @@
           <a><cite>站点</cite></a>
         </span>
     </div>
-    <form class="layui-form">
+    <div class="layui-form">
         <div class="layui-inline">
             <div class="layui-input-inline">
                 <input type="text" class="layui-input searVal" placeholder="请输入名称"/>
@@ -24,7 +24,7 @@
             <a class="layui-btn layui-btn-normal add">添加</a>
             <a class="layui-btn layui-btn-danger layui-btn-normal delAll">删除</a>
         </div>
-    </form>
+    </div>
     <table id="table" lay-filter="table"></table>
 </blockquote>
 <script type="text/html" id="toolbar">
