--- a/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>书籍</title>
-    <link th:href="@{/webjars/layui/2.5.6/css/layui.css}" rel="stylesheet" media="all">
+    <link th:href="${@infoConfig.layuiCss}" rel="stylesheet" media="all">
 </head>
 <body>
 <blockquote class="layui-elem-quote layui-quote-nm">
@@ -36,7 +36,7 @@
 </script>
 <script>const base = "[[@{/}]]";
 const siteid = [[${siteid}]]</script>
-<script th:src="@{/webjars/layui/2.5.6/layui.all.js}"></script>
+<script th:src="${@infoConfig.layuiJs}"></script>
 <script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/book/list.js}"></script>
 </body>
