--- a/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>站点</title>
-    <link th:href="@{/webjars/layui/2.5.6/css/layui.css}" rel="stylesheet" media="all">
+    <link th:href="${@infoConfig.layuiCss}" rel="stylesheet" media="all">
 </head>
 <body>
 <blockquote class="layui-elem-quote layui-quote-nm">
@@ -33,7 +33,7 @@
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script>const base = "[[@{/}]]";</script>
-<script th:src="@{/webjars/layui/2.5.6/layui.all.js}"></script>
+<script th:src="${@infoConfig.layuiJs}"></script>
 <script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/site/list.js}"></script>
 </body>
