--- a/04小说和漫画/fictionweb/src/main/resources/templates/config/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/config/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>配置</title>
-    <link th:href="${@infoConfig.layuiCss}" rel="stylesheet" media="all">
+    <link th:href="${@configInfo.layuiCss}" rel="stylesheet" media="all">
 </head>
 <body>
 <blockquote class="layui-elem-quote layui-quote-nm">
@@ -32,7 +32,7 @@
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script>const base = "[[@{/}]]";</script>
-<script th:src="${@infoConfig.layuiJs}"></script>
+<script th:src="${@configInfo.layuiJs}"></script>
 <script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/config/list.js}"></script>
 </body>
