--- a/04小说和漫画/fictionweb/src/main/resources/templates/main.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>主页</title>
-    <link th:href="${@infoConfig.layuiCss}" rel="stylesheet" media="all">
+    <link th:href="${@configInfo.layuiCss}" rel="stylesheet" media="all">
 </head>
 <body>
 <blockquote class="layui-elem-quote layui-quote-nm">
@@ -19,7 +19,7 @@
     const sitePath = "[[@{/site/list}]]";
     const configPath = "[[@{/config/list}]]";
 </script>
-<script th:src="${@infoConfig.layuiJs}"></script>
+<script th:src="${@configInfo.layuiJs}"></script>
 <script th:src="@{/js/main.js}"></script>
 </body>
 </html>
