--- a/04小说和漫画/fictionweb/src/main/resources/templates/site/add.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/site/add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>添加</title>
-    <link th:href="${@infoConfig.layuiCss}" rel="stylesheet" media="all">
+    <link th:href="${@configInfo.layuiCss}" rel="stylesheet" media="all">
 </head>
 <body>
 <fieldset class="layui-elem-field ">
@@ -43,7 +43,7 @@
 </fieldset>
 <script>const base = "[[@{/}]]";
 const id = [[${id}]];</script>
-<script th:src="${@infoConfig.layuiJs}"></script>
+<script th:src="${@configInfo.layuiJs}"></script>
 <script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/site/add.js}"></script>
 </body>
