--- a/04小说和漫画/fictionweb/src/main/resources/templates/config/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/config/list.html
@@ -32,8 +32,8 @@
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script>const base = "[[@{/}]]";</script>
-<script th:src="${@configInfo.layuiJs}"></script>
-<script th:src="@{/js/common/common.js}"></script>
-<script th:src="@{/js/config/list.js}"></script>
+<script th:src="${@configInfo.layuiJs}"/>
+<script th:src="@{/js/common/common.js}"/>
+<script th:src="@{/js/config/list.js}"/>
 </body>
 </html>
