--- a/04小说和漫画/fictionweb/src/main/resources/templates/main.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/main.html
@@ -19,7 +19,7 @@
     const sitePath = "[[@{/site/list}]]";
     const configPath = "[[@{/config/list}]]";
 </script>
-<script th:src="${@configInfo.layuiJs}"></script>
-<script th:src="@{/js/main.js}"></script>
+<script th:src="${@configInfo.layuiJs}"/>
+<script th:src="@{/js/main.js}"/>
 </body>
 </html>
