--- a/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
@@ -36,8 +36,8 @@
 </script>
 <script>const base = "[[@{/}]]";
 const siteid = [[${siteid}]]</script>
-<script th:src="${@configInfo.layuiJs}"></script>
-<script th:src="@{/js/common/common.js}"></script>
-<script th:src="@{/js/book/list.js}"></script>
+<script th:src="${@configInfo.layuiJs}"/>
+<script th:src="@{/js/common/common.js}"/>
+<script th:src="@{/js/book/list.js}"/>
 </body>
 </html>
