--- a/04小说和漫画/fictionweb/src/main/resources/templates/config/add.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/config/add.html
@@ -90,8 +90,8 @@
 </fieldset>
 <script>const base = "[[@{/}]]";
 const id = [[${id}]];</script>
-<script th:src="${@configInfo.layuiJs}"/>
-<script th:src="@{/js/common/common.js}"/>
-<script th:src="@{/js/config/add.js}"/>
+<script th:src="${@configInfo.layuiJ.js}"></script>
+<script th:src="@{/js/common/common.j.js}"></script>
+<script th:src="@{/js/config/add.j.js}"></script>
 </body>
 </html>
