--- a/04小说和漫画/fictionweb/src/main/resources/templates/book/add.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/book/add.html
@@ -99,8 +99,8 @@
 </fieldset>
 <script>const base = "[[@{/}]]";
 const id = [[${id}]];</script>
-<script th:src="${@configInfo.layuiJs}"/>
-<script th:src="@{/js/common/common.js}"/>
-<script th:src="@{/js/book/add.js}"/>
+<script th:src="${@configInfo.layuiJ.js}"></script>
+<script th:src="@{/js/common/common.j.js}"></script>
+<script th:src="@{/js/book/add.j.js}"></script>
 </body>
 </html>
