--- a/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/site/list.html
@@ -33,8 +33,8 @@
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script>const base = "[[@{/}]]";</script>
-<script th:src="${@configInfo.layuiJs}"/>
-<script th:src="@{/js/common/common.js}"/>
-<script th:src="@{/js/site/list.js}"/>
+<script th:src="${@configInfo.layuiJ.js}"></script>
+<script th:src="@{/js/common/common.j.js}"></script>
+<script th:src="@{/js/site/list.j.js}"></script>
 </body>
 </html>
