--- a/04小说和漫画/fictionweb/src/main/resources/templates/site/add.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/site/add.html
@@ -43,8 +43,8 @@
 </fieldset>
 <script>const base = "[[@{/}]]";
 const id = [[${id}]];</script>
-<script th:src="${@configInfo.layuiJ.js}"></script>
-<script th:src="@{/js/common/common.j.js}"></script>
-<script th:src="@{/js/site/add.j.js}"></script>
+<script th:src="${@configInfo.layuiJs}"></script>
+<script th:src="@{/js/common/common.js}"></script>
+<script th:src="@{/js/site/add.js}"></script>
 </body>
 </html>
