fictionweb:添加任务开关相关。

--- a/04小说和漫画/fictionweb/src/main/resources/templates/book/add.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/book/add.html
@@ -49,6 +49,13 @@
                 </div>
             </div>
             <div class="layui-form-item">
+                <label class="layui-form-label">任务开关</label>
+                <div class="layui-input-block">
+                    <input type="radio" name="taskswitch" value="0" title="关闭">
+                    <input type="radio" name="taskswitch" value="1" title="开启" checked>
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label class="layui-form-label">标题处理方式</label>
                 <div class="layui-input-block">
                     <select name="titleType" class="titleType" lay-verify="required" lay-filter="titleType">
