--- a/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/book/list.html
@@ -35,7 +35,7 @@
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script>const base = "[[@{/}]]";
-const siteid = [[${siteid}]]</script>
+const siteid = [[${siteid}]];</script>
 <script th:src="${@configInfo.layuiJs}"></script>
 <script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/book/list.js}"></script>
