--- a/04小说和漫画/fictionweb/src/main/resources/templates/file/video.html
+++ b/04小说和漫画/fictionweb/src/main/resources/templates/file/video.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title th:text="${name}"></title>
 </head>
-<body>
-<video controls preload="metadata" fluid="false" name="media" style="width: 100%; height: 100%;">
+<body align="center">
+<video controls preload="metadata" fluid="false" name="media" style="width: 100%">
     <source th:src="@{'/api/file/download/' + ${path}}" th:type="'video/' + ${form}"/>
 </video>
+<hr/>
+<a style="color: black;text-decoration: none;" th:href="@{'/api/file/download/' + ${path}}" th:text="'下载：' + ${name}"></a>
 </body>
 </html>
