添加控制台日志WebSocket推送。

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,6 +12,7 @@
         <a class="layui-btn layui-btn-normal" th:href="@{/site/list}">站点管理</a>
         <a class="layui-btn layui-btn-warm" th:href="@{/config/list}">配置管理</a>
         <a class="layui-btn layui-bg-cyan" th:href="@{/file/list}">文件列表</a>
+        <a class="layui-btn" th:href="@{/log/show}" style="background-color: #5FB878">当前日志</a>
     </div>
 </blockquote>
 <script>
