--- a/src/main/resources/templates/file/video.html
+++ b/src/main/resources/templates/file/video.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport"
+          content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title th:text="${name}"></title>
 </head>
 <body align="center">
