适配移动端

--- a/src/main/resources/templates/file/list.html
+++ b/src/main/resources/templates/file/list.html
@@ -39,11 +39,11 @@
     </style>
 </head>
 <body>
-<h1>
+<h3 class="date">
     <a th:href="@{/main}">首页</a>
     <span> - </span>
     <a th:href="@{'/file/list/' + ${path}}" th:text="'索引：' + ${pathName}">索引：/</a>
-</h1>
+</h3>
 <hr>
 <!--<pre></pre>-->
 <table>
