--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -19,6 +19,10 @@
     <div class="layui-btn-container" align="center">
         <a class="layui-btn" href="http://ivi.bupt.edu.cn" target="_blank">IVI测试频道列表</a>
     </div>
+    <hr/>
+    <div class="layui-btn-container" align="center">
+        <a class="layui-btn" th:href="@{/m/list.html}">书籍<i class="layui-icon layui-icon-cellphone"></i></a>
+    </div>
 </blockquote>
 <script>
     const base = "[[@{/}]]";
