--- a/src/main/resources/templates/file/list.html
+++ b/src/main/resources/templates/file/list.html
@@ -5,13 +5,7 @@
           content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title th:text="'索引：' + ${pathName}">索引：/</title>
     <style>
-        .name {
-            min-width: 200px;
-            max-width: 300px;
-        }
-
-        .date {
-            min-width: 160px;
+        .inline-block {
             /**
                 思路：
                 1.设置inline-block属相
@@ -23,8 +17,16 @@
             display: inline-block;
             white-space: nowrap;
             width: 100%;
-            overflow: hidden;
+            /*overflow: hidden;*/
             text-overflow: ellipsis;
+        }
+        .name {
+            min-width: 200px;
+            max-width: 300px;
+        }
+
+        .date {
+            min-width: 160px;
         }
 
         .size {
@@ -39,7 +41,7 @@
     </style>
 </head>
 <body>
-<h3 class="date">
+<h3 class="inline-block">
     <a th:href="@{/main}">首页</a>
     <span> - </span>
     <a th:href="@{'/file/list/' + ${path}}" th:text="'索引：' + ${pathName}">索引：/</a>
@@ -52,7 +54,7 @@
             <a th:href="@{'/file/list/' + ${item.path}}" th:text="${item.name + (item.isDir ? '/' : '')}"></a>
         </td>
         <td class="size" th:text="${item.isDir ? '-' : item.size + item.unit} "></td>
-        <td class="date" th:text="${item.lastModified}"></td>
+        <td class="date inline-block" th:text="${item.lastModified}"></td>
     </tr>
 </table>
 <hr>
