--- a/src/main/resources/templates/file/video.html
+++ b/src/main/resources/templates/file/video.html
@@ -6,11 +6,11 @@
     <title th:text="${name}"></title>
 </head>
 <body align="center">
-<a style="color: black;text-decoration: none;" th:href="@{'/api/file/download/' + ${path}}"
+<a style="color: black;text-decoration: none;" th:href="@{'/api/file/download/' + ${path} + '?token=' + ${token}}"
    th:text="'下载：' + ${name}"></a>
 <hr/>
 <video controls fluid="false" id="video" name="media" preload="metadata" style="max-width: 100%">
-    <source th:src="@{'/api/file/download/' + ${path}}" th:type="'video/' + ${form}"/>
+    <source th:src="@{'/api/file/download/' + ${path} + '?token=' + ${token}}" th:type="'video/' + ${form}"/>
 </video>
 </body>
 <script>
