--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,16 +12,17 @@
         <a class="layui-btn book" th:href="@{/book/list}">书籍管理</a>
         <a class="layui-btn layui-btn-normal" th:href="@{/site/list}">站点管理</a>
         <a class="layui-btn layui-btn-warm" th:href="@{/config/list}">配置管理</a>
-        <a class="layui-btn layui-bg-cyan" th:href="@{/file/list}">文件列表</a>
+        <a class="layui-btn layui-bg-cyan file" th:href="@{/file/list}">文件列表</a>
         <a class="layui-btn" th:href="@{/log/show}" style="background-color: #5FB878">当前日志</a>
     </div>
     <hr/>
     <div class="layui-btn-container" align="center">
-        <a class="layui-btn" href="http://ivi.bupt.edu.cn" target="_blank">IVI测试频道列表</a>
+        <a class="layui-btn" th:href="@{/m/list.html}">书籍<i class="layui-icon layui-icon-cellphone"></i></a>
+        <a class="layui-btn layui-btn-normal setToken">设置token</a>
     </div>
     <hr/>
     <div class="layui-btn-container" align="center">
-        <a class="layui-btn" th:href="@{/m/list.html}">书籍<i class="layui-icon layui-icon-cellphone"></i></a>
+        <a class="layui-btn" href="http://ivi.bupt.edu.cn" target="_blank">IVI测试频道列表</a>
     </div>
 </blockquote>
 <script>
@@ -30,7 +31,10 @@
     // const sitePath = "[[@{/site/list}]]";
     // const configPath = "[[@{/config/list}]]";
 </script>
-<!--<script th:src="@{${@configInfo.layuiJs}}"></script>-->
-<!--<script th:src="@{/js/main.js}"></script>-->
+<script th:src="@{${@configInfo.layuiJs}}"></script>
+<!-- RSA加密解密 -->
+<script th:src="@{/webjars/jsencrypt/bin/jsencrypt.js}"></script>
+<script th:src="@{/js/utils/rsa.js}"></script>
+<script th:src="@{/js/main.js}"></script>
 </body>
 </html>
