下载URL调整，token相关方法调整。

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -32,9 +32,7 @@
     // const configPath = "[[@{/config/list}]]";
 </script>
 <script th:src="@{${@configInfo.layuiJs}}"></script>
-<!-- RSA加密解密 -->
-<script th:src="@{/webjars/jsencrypt/bin/jsencrypt.js}"></script>
-<script th:src="@{/js/utils/rsa.js}"></script>
+<script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/main.js}"></script>
 </body>
 </html>
