Authorization验证，但RSA加密内容长度不够，暂时不使用

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -18,7 +18,7 @@
     <hr/>
     <div class="layui-btn-container" align="center">
         <a class="layui-btn" th:href="@{/m/list.html}">书籍<i class="layui-icon layui-icon-cellphone"></i></a>
-        <a class="layui-btn layui-btn-normal setToken">设置token</a>
+        <a class="layui-btn layui-btn-normal setAuthorization">设置授权</a>
     </div>
     <hr/>
     <div class="layui-btn-container" align="center">
