书籍添加详情和详情定时任务类。

--- a/src/main/resources/templates/book/add.html
+++ b/src/main/resources/templates/book/add.html
@@ -104,6 +104,12 @@
                     </select>
                 </div>
             </div>
+            <div class="layui-form-item layui-form-text detailDiv">
+                <label class="layui-form-label">详情</label>
+                <div class="layui-input-block">
+                    <textarea name="detail" class="layui-textarea" readonly="true" disabled></textarea>
+                </div>
+            </div>
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button type="submit" class="layui-btn" lay-submit lay-filter="submit">提交</button>
