--- a/src/main/resources/templates/site/add.html
+++ b/src/main/resources/templates/site/add.html
@@ -8,7 +8,7 @@
 <body>
 <fieldset class="layui-elem-field ">
     <div class="layui-field-box">
-        <form class="layui-form" lay-filter="form">
+        <form class="layui-form layui-form-pane" lay-filter="form">
             <div class="layui-form-item">
                 <label class="layui-form-label">名称</label>
                 <div class="layui-input-block">
@@ -26,7 +26,7 @@
                     </select>
                 </div>
             </div>
-            <div class="layui-form-item">
+            <div class="layui-form-item layui-form-text">
                 <label class="layui-form-label">链接</label>
                 <div class="layui-input-block">
                     <textarea placeholder="站点链接" name="url" class="layui-textarea url"></textarea>
