--- a/src/main/resources/templates/book/add.html
+++ b/src/main/resources/templates/book/add.html
@@ -104,7 +104,7 @@
                     </select>
                 </div>
             </div>
-            <div class="layui-form-item layui-form-text detailDiv">
+            <div class="layui-form-item layui-form-text detailDiv" style="display: none;">
                 <label class="layui-form-label">详情</label>
                 <div class="layui-input-block">
                     <textarea name="detail" class="layui-textarea" readonly></textarea>
