video设置初始音量

--- a/src/main/resources/templates/file/video.html
+++ b/src/main/resources/templates/file/video.html
@@ -16,6 +16,8 @@
 <script>
     // 获取 video 标签
     const video = document.getElementById("video");
+    // 50%音量
+    video.volume = 0.5;
 
     // 设置 video 的高度
     function setVideoHeight() {
